Fixing alignment

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul.sidenav li a:hover:not(.active) {
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
  float: left;
- width: 50%;
+ width: 37%;
  padding: 5px;
 }
 .row {
